# EntityComponentMetaSystem

./: .clang-format  .gitignore  .gitlab-ci.yml  AttributionNotice  Bitset_8hpp_source.html  Combine_8hpp_source.html  ContainsAll_8hpp_source.html  Contains_8hpp_source.html  Doxyfile  EC_8hpp_source.html  ForEachDoubleTuple_8hpp_source.html  ForEachWithIndex_8hpp_source.html  ForEach_8hpp_source.html  IndexOf_8hpp_source.html  LICENSE  Manager_8hpp_source.html  Matching_8hpp_source.html  Meta_8hpp_source.html  Morph_8hpp_source.html  README.md  ThreadPool_8hpp_source.html  TypeListGet_8hpp_source.html  TypeList_8hpp_source.html  annotated.html  classEC_1_1ThreadPool-members.html  classEC_1_1ThreadPool.html  classes.html  command_that_causes_error.sh  conanfile.py  dir_135a910f35de5f8304a5f6ff96abbe33.html  dir_263b1d507b71ffc0242cc31d2deb90f4.html  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md_README.html  menudata.js  (+48 more)
.forgejo/workflows/: doxygen.yaml  unittests.yml
.github/workflows/: gh-pages.yml  unittests.yml
conan_usage_example/: CMakeLists.txt  conanfile.txt  setup_build_with_conan.sh
conan_usage_example/src/: main.cpp
doxygen/: mainpage.dox
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+1 more)
src/: CMakeLists.txt
src/EC/: Bitset.hpp  EC.hpp  Manager.hpp  Meta.hpp  ThreadPool.hpp
src/EC/Meta/: Combine.hpp  Contains.hpp  ContainsAll.hpp  ForEach.hpp  ForEachDoubleTuple.hpp  ForEachWithIndex.hpp  IndexOf.hpp  Matching.hpp  Meta.hpp  Morph.hpp  TypeList.hpp  TypeListGet.hpp
src/test/: ECTest.cpp  Main.cpp  MetaTest.cpp  ThreadPoolTest.cpp  WillFailCompileTest.cpp  test_helpers.h
